--- a/carcollection/src/pages/add/Add.scss
+++ b/carcollection/src/pages/add/Add.scss
@@ -214,6 +214,7 @@ html{
         padding: 15px 30%;
         margin-top: 40px;
         margin-bottom: 40px;
+        color: $background-color;
     }
 
     .add-btn:active{
