--- a/carcollection/src/pages/login/Login.scss
+++ b/carcollection/src/pages/login/Login.scss
@@ -14,11 +14,17 @@ html{
     color: $background-color;
     justify-content: center;
     height: 100vh;
+    background-image: url(../../img/pattern.png);
+    background-repeat: repeat;
+    background-size: 45%;
+    background-position-y: -25px;
+    animation: moving 600s linear infinite;
+
 
     h2{
         font-size: 45px;
         position: absolute;
-        top: 50px;
+        top: 80px;
     }
 
     .input-container{
@@ -92,4 +98,12 @@ html{
     .create-account:active{
         color: #282828;
     }
+}
+
+@keyframes moving {
+    100%{
+        background-position-x: 15000px;
+        background-position-y: -10000px;
+    }
+    
 }
