Texto errores, input de nombre, funcionalidad con firebase

--- a/carcollection/src/pages/add/Add.scss
+++ b/carcollection/src/pages/add/Add.scss
@@ -29,9 +29,7 @@ html{
         left: 10px;
     }
 
-    .back-button:active{
-        color: #8d6500;
-    }
+c
 
     input{
         text-align: center;
