--- a/carcollection/src/pages/register/Register.scss
+++ b/carcollection/src/pages/register/Register.scss
@@ -13,11 +13,6 @@ html{
     color: white;
     justify-content: center;
     height: 100vh;
-    background-image: url(../../img/white-pattern.png);
-    background-repeat: repeat;
-    background-size: 45%;
-    background-color: $background-color;
-    animation: moving 600s linear infinite;
 
 
     h2{
@@ -50,10 +45,11 @@ html{
             pointer-events: none;
             transition: 0.2s;
             font-weight: bold;
+            color: white;
         }
 
         input:focus + label, input:valid + label{
-            transform: translateY(-25px);
+            transform: translateY(-30px);
         }
     }
 
@@ -100,12 +96,4 @@ html{
             bottom: 0;
         }
     }
-}
-
-@keyframes moving {
-    100%{
-        background-position-x: 15000px;
-        background-position-y: -10000px;
-    }
-    
 }
