--- a/carcollection/src/pages/register/Register.scss
+++ b/carcollection/src/pages/register/Register.scss
@@ -36,6 +36,7 @@ html{
             border-bottom: 2px solid white;
             font-size: 20px;
             margin-top: 15%;
+            border-radius: 0;
         }
 
         label{
