--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -8,13 +8,72 @@ $card-radius: 10px;
 }
 
 html{
-    background-color: $background-color;
+    overflow-x: hidden;
 }
 
 .home-container{
     padding: 0;
     margin: 0;
     height: 100vh;
+    background-color: $background-color;
+
+    .logout-background{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #000000b9;
+        z-index: 10;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        overflow: hidden !important;
+
+        .logout-warning{
+            background-color: $primary-color;
+            border-radius: 15px;
+            width: 90%;
+            padding-top: 20px;
+            padding-bottom: 0;
+        }
+
+        .buttons-container{
+            margin-top: 50px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: end;
+
+            button{
+                margin-bottom: 0;
+                font-size: 18px;
+                padding: 15px 0;
+                width: 100%;
+                border: none;
+                font-weight: bold;
+                border-top: 2px solid $background-color;
+                color: white;
+            }
+
+            button:first-child{
+                border-right: 1px solid $background-color;
+                background-color: rgb(180, 47, 47);
+            }
+
+            button:first-child:active{
+                background-color: rgb(130, 34, 34);
+            }
+
+            button:last-child{
+                border-left: 1px solid $background-color;
+                background-color: rgb(136, 136, 136);
+            }
+
+            button:last-child:active{
+                background-color: rgb(107, 107, 107);
+            }
+        }
+    }
     
     header{
         color: $background-color;
@@ -27,6 +86,29 @@ html{
         top: 0;
         align-items: center;
         z-index: 2;
+
+        .logout-btn{
+            background-color: rgb(91, 0, 0);
+            border-radius: 100px;
+            border: none;
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 10px ;
+        }
+
+        .logout-btn:active{
+            background-color: rgb(63, 0, 0);
+        }
+
+        .add-btn{
+            background-color: transparent;
+            width: fit-content;
+            height: fit-content;
+            padding: 0;
+            border: none;
+        }
+
     }
 
     section{
