Read data from firebase

--- a/carcollection/src/pages/add/Add.scss
+++ b/carcollection/src/pages/add/Add.scss
@@ -8,6 +8,8 @@ $background-secondary-color: #282828;
 
 html{
     background-color: $background-color;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .add-container{
@@ -80,11 +82,10 @@ html{
             justify-content: end;
             align-items: center;
             text-align: center;
-            background-image: url(../../img/image-icon.png);
-            background-size: 50%;
             background-repeat: no-repeat;
             background-position: center;
-            background-position-y: 40px;
+            background-size: auto 100%;
+            background-position-y: 0;
 
 
             .upload-btn{
