--- a/carcollection/src/components/Card.scss
+++ b/carcollection/src/components/Card.scss
@@ -12,6 +12,7 @@ $card-radius: 10px;
     margin-top: 20px;
     margin-right: 8px;
     position: relative;
+    border: none;
 
     h2{
         width: 95%;
