--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -113,10 +113,11 @@ html{
 
     section{
         padding-left: 15px;
+        margin-top: 30%;
 
         .title{
             font-size: 35px;
-            margin-top: 30%;
+            margin-top: 0%;
             color: white;
             margin-bottom: 0;
         }
@@ -129,8 +130,135 @@ html{
             display: flex;
             justify-content:start;
             flex-wrap: wrap;
+            margin-bottom: 45px;
         }
 
 
+    }
+}
+
+.info-container{
+    color: white;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    background-color: $background-color;
+    position: relative;
+
+    .back-button{
+        position: absolute;
+        color: $primary-color;
+        background-color: rgba(255, 0, 0, 0);
+        border: none;
+        font-size: 20px;
+        top: 10px;
+        left: 10px;
+    }
+
+    .image-title-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        margin-top: 50px;
+        position: relative;
+
+        .image-container{
+            background-color: $background-secondary-color;
+            width: fit-content;
+            height: fit-content;
+            border-radius: 20px;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+
+            .image{
+                width: 200px;
+                height: 300px;
+                margin: 10px 10px;
+                margin-bottom: 30px;
+                background-size: 100% auto;
+                background-repeat: no-repeat;
+                background-position: 50%;
+                border-radius: 20px;
+                
+            }
+        }
+
+        .titleInfo{
+            background-color: $primary-color;
+            border-radius: 100px;
+            color: $background-color;
+            padding: 10px 15px;
+            font-size: 25px;
+            max-width: 75%;
+            min-width: 70%;
+            margin: 0;
+            z-index: 2;
+        }
+
+        .collectionInfo{
+            border-bottom-right-radius: 100px;
+            border-bottom-left-radius: 100px;
+            color: $background-color;
+            padding: 5px 30px;
+            font-size: 15px;
+            max-width: 80%;
+            margin: 0;
+            z-index: 1;
+            max-width: 35%;
+            min-width: 35%;
+            color: white;
+            font-weight: 400;
+        }
+        
+
+
+    }
+
+    .details-container{
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-bottom: 40px;
+        position: relative;
+
+        .input-container{
+            position: relative;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 5px;
+
+            label{
+                position: absolute;
+                left: 30px;
+                font-weight: bold;
+                font-size: 20px;
+            }
+
+            input{
+                background-color: $background-secondary-color;
+                border: none;
+                border-radius: 10px;
+                font-size: 18px;
+                height: 30px;
+                text-align: right;
+                padding: 5px 20px;
+                color: white;
+                width: 80%;
+            }
+        }
+    }
+
+    .delete-btn{
+        margin: 0;
+        background-color: #500606;
+        border: none;
+        width: 100%;
+        height: 40px;
+        color: white;
+        font-size: 18px;
     }
 }
