--- a/carcollection/src/pages/login/Login.scss
+++ b/carcollection/src/pages/login/Login.scss
@@ -7,6 +7,7 @@ html{
 }
 
 .login-container{
+    overflow: hidden;
     background-color: $primary-color;
     display: flex;
     flex-direction: column;
@@ -29,7 +30,7 @@ html{
         input{
             width: 100%;
             outline: none;
-            height: 35px;
+            height: 25px;
             background-color: transparent;
             border: none;
             border-bottom: 2px solid $background-color;
