--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -257,8 +257,10 @@ html{
         background-color: #500606;
         border: none;
         width: 100%;
-        height: 40px;
+        height: 50px;
         color: white;
         font-size: 18px;
+        padding-bottom: 60px;
+        padding-top: 10px;
     }
 }
