--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -3,13 +3,6 @@ $background-color: #111111;
 $background-secondary-color: #282828;
 $card-radius: 10px;
 
-*{
-    overflow-x: hidden;
-}
-
-html{
-    overflow-x: hidden;
-}
 
 .home-container{
     padding: 0;
@@ -58,6 +51,7 @@ html{
             button:first-child{
                 border-right: 1px solid $background-color;
                 background-color: rgb(180, 47, 47);
+                border-bottom-left-radius: $card-radius;
             }
 
             button:first-child:active{
@@ -67,6 +61,7 @@ html{
             button:last-child{
                 border-left: 1px solid $background-color;
                 background-color: rgb(136, 136, 136);
+                border-bottom-right-radius: $card-radius;
             }
 
             button:last-child:active{
@@ -109,6 +104,11 @@ html{
             border: none;
         }
 
+        h2{
+            text-align: center;
+            width: 50%;
+        }
+
     }
 
     section{
@@ -143,7 +143,6 @@ html{
     margin: 0;
     height: 100vh;
     background-color: $background-color;
-    position: relative;
 
     .back-button{
         position: absolute;
