--- a/carcollection/src/pages/login/Login.scss
+++ b/carcollection/src/pages/login/Login.scss
@@ -106,10 +106,11 @@ html{
         align-items: center;
         flex-direction: column;
         justify-content: start;
+        text-align: center;
 
         #warning{
-            position: absolute;
-            bottom: 0;
+            font-size: 18px;
+            margin-top: 20px;
         }
     }
 
