--- a/carcollection/src/pages/add/Add.scss
+++ b/carcollection/src/pages/add/Add.scss
@@ -59,6 +59,7 @@ html{
         font-size: 20px;
         top: 10px;
         left: 10px;
+        cursor: pointer;
     }
 
 
@@ -126,6 +127,7 @@ html{
                 margin-bottom: 15px;
                 border-radius: 100px;
                 padding: 5px 0;
+                cursor: pointer;
     
                 input{
                     height: 100%;
@@ -248,6 +250,7 @@ html{
         padding: 15px 30%;
         margin-bottom: 40px;
         color: $background-color;
+        cursor: pointer;
     }
 
     .add-btn:active{
@@ -261,6 +264,17 @@ html{
         width: 80%;
     }
 
+}
+
+
+@media (min-width: 1000px){
+    .add-container{
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+    }
 }
 
 
