--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -137,6 +137,68 @@ $card-radius: 10px;
     }
 }
 
+.delete-background{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #000000b9;
+    z-index: 10;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden !important;
+    top: 0;
+
+
+    .delete-warning{
+        background-color: $primary-color;
+        border-radius: 15px;
+        width: 90%;
+        padding-top: 20px;
+        padding-bottom: 0;
+    }
+
+    .buttons-container{
+        margin-top: 50px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: end;
+
+        button{
+            margin-bottom: 0;
+            font-size: 18px;
+            padding: 15px 0;
+            width: 100%;
+            border: none;
+            font-weight: bold;
+            border-top: 2px solid $background-color;
+            color: white;
+        }
+
+        button:first-child{
+            border-right: 1px solid $background-color;
+            background-color: rgb(180, 47, 47);
+            border-bottom-left-radius: $card-radius;
+        }
+
+        button:first-child:active{
+            background-color: rgb(130, 34, 34);
+        }
+
+        button:last-child{
+            border-left: 1px solid $background-color;
+            background-color: rgb(136, 136, 136);
+            border-bottom-right-radius: $card-radius;
+        }
+
+        button:last-child:active{
+            background-color: rgb(107, 107, 107);
+        }
+    }
+}
+
 .info-container{
     color: white;
     padding: 0;
@@ -294,8 +356,6 @@ $card-radius: 10px;
     .info-container{
         overflow: hidden;
 
-        
-
         center{
             display: block;
         }
@@ -376,9 +436,6 @@ $card-radius: 10px;
                 top: 0;
                 left: 0;
             }
-            
-    
-    
         }
     
         .details-container{
@@ -585,7 +642,7 @@ $card-radius: 10px;
         .logout-background{
     
             .logout-warning{
-                width: 50%;
+                width: 30%;
             }
     
             .buttons-container{
@@ -635,6 +692,20 @@ $card-radius: 10px;
                 flex-wrap: wrap;
                 margin-bottom: 60px;
                 width: 100%;
+            }
+        }
+    }
+
+    .delete-background{
+    
+        .delete-warning{
+            width: 30%;
+        }
+
+        .buttons-container{
+
+            button{
+                cursor: pointer;
             }
         }
     }
