--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -10,6 +10,17 @@ $card-radius: 10px;
     height: 100vh;
     background-color: $background-color;
 
+    .totalCars{
+        color: rgba(255, 255, 255, 0.525);
+        background-color: $background-secondary-color;
+        width: fit-content;
+        font-size: 20px;
+        padding: 10px 15px;
+        border-radius: 100px;
+        margin: 0 auto;
+        margin-top: 90px;
+    }
+
     .logout-background{
         position: fixed;
         width: 100%;
@@ -82,6 +93,7 @@ $card-radius: 10px;
         align-items: center;
         z-index: 2;
 
+
         .logout-btn{
             background-color: rgb(91, 0, 0);
             border-radius: 100px;
@@ -113,8 +125,8 @@ $card-radius: 10px;
 
     section{
         padding-left: 15px;
-        margin-top: 30%;
-
+        margin-top: 5%;
+    
         .title{
             font-size: 35px;
             margin-top: 0%;
@@ -206,15 +218,34 @@ $card-radius: 10px;
     height: 100vh;
     background-color: $background-color;
 
-    .back-button{
-        position: absolute;
-        color: $primary-color;
-        background-color: rgba(255, 0, 0, 0);
-        border: none;
-        font-size: 20px;
-        top: 10px;
-        left: 10px;
+    .buttons-container{
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 0;
+
+        .back-button{
+            color: $primary-color;
+            background-color: transparent;
+            border: none;
+            font-size: 20px;
+            margin-left: 10px;
+        }
+    
+        .edit-button{
+            color: $primary-color;
+            background-color: transparent;
+            border: none;
+            font-size: 20px;
+            margin-right: 10px;
+            cursor: pointer;
+        }
+
+        .edit-button:active{
+            background-color: none;
+        }
     }
+
+    
 
     .image-title-container{
         display: flex;
@@ -309,7 +340,22 @@ $card-radius: 10px;
                 padding: 5px 20px;
                 color: white;
                 width: 80%;
+                border: 1px $primary-color solid;
+                outline: none;
             }
+
+            input:disabled{
+                background-color:#2828288d;
+                border: none;
+            }
+
+
+            input[type="date"]::-webkit-inner-spin-button,
+            input[type="date"]::-webkit-calendar-picker-indicator {
+                display: none;
+                -webkit-appearance: none;
+            }
+            
         }
     }
 
@@ -638,6 +684,10 @@ $card-radius: 10px;
 
 @media (min-width: 1000px){
     .home-container{
+        .totalCars{
+            margin-top: 80px;
+            font-size: 20px;
+        }
     
         .logout-background{
     
@@ -655,6 +705,7 @@ $card-radius: 10px;
         
         header{
             justify-content: space-between;
+            padding: 5px 0;
     
             .logout-btn{
                 font-size: 20px;
@@ -674,13 +725,18 @@ $card-radius: 10px;
     
             h2{
                 font-size: 25px;
+                text-align: center;
+                position: absolute;
+                margin: 0 auto;
+                right: 0;
+                left: 0;
             }
     
         }
     
         section{
             padding-left: 30px;
-            margin-top: 10%;
+            margin-top: 10px;
     
             .title{
                 font-size: 35px;
@@ -715,15 +771,35 @@ $card-radius: 10px;
             display: flex;
         }
 
-        .back-button{
+        .buttons-container{
+            display: flex;
+            justify-content: space-between;
             position: absolute;
-            color: $primary-color;
-            background-color: rgba(255, 0, 0, 0);
-            border: none;
-            font-size: 20px;
-            top: 30px;
-            left: 30px;
-            cursor: pointer;
+            top: 0;
+            width: 100%;
+    
+            .back-button{
+                color: $primary-color;
+                background-color: rgba(255, 0, 0, 0);
+                border: none;
+                font-size: 30px;
+                margin-left: 20px;
+                margin-top: 10px;
+                cursor: pointer;
+            }
+        
+            .edit-button{
+                color: white;
+                background-color: $background-secondary-color;
+                border: none;
+                font-size: 30px;
+                margin-right: 30px;
+                margin-top: 20px;
+                cursor: pointer;
+                border-radius: 100px;
+                padding: 10px 20px;
+                font-weight: bold;
+            }
         }
     
         .image-title-container{
