--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -899,6 +899,12 @@ $card-radius: 10px;
                     padding: 5px 20px;
                     color: white;
                     width: 80%;
+                    border: 1px $primary-color solid;
+                    outline: none;
+                }
+
+                input:disabled{
+                    border: none;
                 }
             }
         }
