--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -9,17 +9,59 @@ $card-radius: 10px;
     margin: 0;
     height: 100vh;
     background-color: $background-color;
+    
 
-    .totalCars{
-        color: rgba(255, 255, 255, 0.525);
-        background-color: $background-secondary-color;
-        width: fit-content;
-        font-size: 20px;
-        padding: 10px 15px;
-        border-radius: 100px;
-        margin: 0 auto;
+    .subHeader{
+        display: flex;
         margin-top: 90px;
+        position: relative;
+
+        .totalCars{
+            color: rgba(255, 255, 255, 0.525);
+            background-color: $background-secondary-color;
+            width: fit-content;
+            font-size: 20px;
+            padding: 10px 15px;
+            border-radius: 100px;
+            margin: 0 auto;
+        }
+
+        .filterContainer{
+            position: absolute;
+            right: 10px;
+            bottom: 30px;
+            top: 0;
+            margin: auto 0;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 25px;
+            text-align: center;
+            
+
+            label{
+                color: rgba(255, 255, 255, 0.545);
+                margin-bottom: 5px;
+            }
+    
+            .ownerFilter{
+                text-align: center;
+                background-color: $background-secondary-color;
+                color: white;
+                border: none;
+                border-radius: 10px;
+                height: fit-content;
+                font-size: 15px;
+                padding: 5px 5px;
+                outline: none;
+                width: 80px;
+                max-width: 80px;
+            }
+        }
+
+
     }
+
+    
 
     .logout-background{
         position: fixed;
