--- a/carcollection/src/pages/home/Home.scss
+++ b/carcollection/src/pages/home/Home.scss
@@ -29,13 +29,14 @@ $card-radius: 10px;
         .filterContainer{
             position: absolute;
             right: 10px;
-            bottom: 30px;
+            bottom: 0px;
             top: 0;
             margin: auto 0;
             display: flex;
             flex-direction: column;
-            margin-bottom: 25px;
+            margin-bottom: 2px;
             text-align: center;
+            height: fit-content;
             
 
             label{
@@ -55,6 +56,7 @@ $card-radius: 10px;
                 outline: none;
                 width: 80px;
                 max-width: 80px;
+                height: 28px;
             }
         }
 
@@ -397,6 +399,13 @@ $card-radius: 10px;
                 display: none;
                 -webkit-appearance: none;
             }
+
+            input[type=number]::-webkit-inner-spin-button,
+            input[type=number]::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+                }
+            input[type=number] { -moz-appearance:textfield; }
             
         }
     }
